erreur.log
Impossible de trouver C:\CPCDOS\CPCDOS~3\DEBUG.LOG
client.cpp: In function 'int cpinti::net_client::Taille_Contenu(int)':
client.cpp:122:22: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
    while(octets_recu = recv(socket, ptr, 1, 0))
          ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
client.cpp: In function 'int cpinti::net_client::Demarrer_client(std::__cxx11::string, unsigned int, unsigned int, int)':
client.cpp:382:64: warning: cast from type 'const char*' to type 'char*' casts away qualifiers [-Wcast-qual]
       VAR_PROGRESSION = (char*) BUFFER.substr(posCFG+18).c_str();
                                                                ^
client.cpp:397:58: warning: cast from type 'const char*' to type 'char*' casts away qualifiers [-Wcast-qual]
       VAR_SPEED = (char*) BUFFER.substr(posCFG+15).c_str();
                                                          ^
client.cpp:413:57: warning: cast from type 'const char*' to type 'char*' casts away qualifiers [-Wcast-qual]
       VAR_SIZE = (char*) BUFFER.substr(posCFG+14).c_str();
                                                         ^
client.cpp:553:26: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
        while(octets_recu = recv(SocketReseau, buffer, 1024, 0))
              ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
client.cpp:556:9: error: 'ENTRER_SectionCritique' was not declared in this scope
         ENTRER_SectionCritique();
         ^~~~~~~~~~~~~~~~~~~~~~
client.cpp:588:10: error: 'SORTIR_SectionCritique' was not declared in this scope
          SORTIR_SectionCritique();
          ^~~~~~~~~~~~~~~~~~~~~~
client.cpp:647:8: error: 'SORTIR_SectionCritique' was not declared in this scope
        SORTIR_SectionCritique();
        ^~~~~~~~~~~~~~~~~~~~~~
client.cpp:652:25: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
         if(NombreOctets == TailleContenu) break;
            ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
client.cpp:652:28: warning: conversion to 'unsigned int' from 'int' may change the sign of the result [-Wsign-conversion]
         if(NombreOctets == TailleContenu) break;
                            ^~~~~~~~~~~~~
make.exe: *** [client.o] Error 1
